# build_tool_research

cmake/: cmake notes.txt  opengl_cmake_attempt.txt
cmake/basic_project/: CMakeLists.txt
cmake/cmake script tests/: test_script.cmake
cmake/cmake_config_scripting_0_basic/: CMakeLists.txt
cmake/cmake_config_scripting_1_advanced/: CMakeLists.txt  main.cpp
cmake/cmake_config_scripting_2_functions/: CMakeLists.txt
cmake/cmake_subdirs_and_dirs_for_binaries_and_src/: CMakeLists.txt  print_vars.cmake
cmake/cmake_subdirs_and_dirs_for_binaries_and_src/executable_dir/: CMakeLists.txt  main.cpp
cmake/cmake_subdirs_and_dirs_for_binaries_and_src/library_dir/: CMakeLists.txt
cmake/cmake_subdirs_and_dirs_for_binaries_and_src/library_dir/src/HelloLib/: hello.hpp
cmake/library_test/: CMakeLists.txt  hello.cpp  main.cpp  sc.net.lnk
cmake/library_test_subdirectories/: CMakeLists.txt
cmake/library_test_subdirectories/executable_dir/: CMakeLists.txt
cmake/library_test_subdirectories/library_dir/: CMakeLists.txt
cmd_line_visual_studio/: how-to-build.txt  main.cpp
